Fix header on tablet view

--- a/source/sass/header.sass
+++ b/source/sass/header.sass
@@ -19,7 +19,7 @@ header
       color: black
     a.active
       color: $accent
-    @media #{$medium-down}
+    @media #{$small-only}
       display: block
 
 ul.site-navigation
@@ -43,7 +43,7 @@ ul.site-navigation
         padding-bottom: rem-calc(14)
   li:last-child
     margin-right: 0
-  @media #{$medium-down}
+  @media #{$small-only}
     display: none
     font-size: rem-calc(18)
     margin-bottom: 0
